<resources>
    <string name="app_name">JXNUGo</string>

    <string name="registe">注册</string>
    <string name="login">登录</string>

    <string name="enter_email">请输入邮箱</string>
    <string name="enter_password">请输入密码</string>
    <string name="confirm">确认密码</string>
    <string name="passowrd_different">两次输入密码不相同</string>
    <string name="enter_username">请输入用户名</string>
    <string name="third_party_login">第三方登录</string>
    <string name="users_login">账号管理</string>
    <string name="login_email">请输入邮箱登录</string>
    <string name="login_username">请输入账号登录</string>
    <string name="login_password">请输入密码登录</string>
    <string name="registe_success">注册成功，请前往邮箱验证</string>
    <string name="wrong_email">邮箱格式错误</string>
    <string name="settings">设置</string>
    <string name="please_login">请登录</string>
    <string name="say_something">说点什么吧</string>
    <string name="exit_after_backpressed">再按一次后退键退出</string>

    <string name="my_following">我的关注</string>
    <string name="other_following">TA的关注</string>
    <string name="my_followers">关注我的人</string>
    <string name="other_followers">关注TA的人</string>
    <string name="my_post">我的帖子</string>
    <string name="other_post">TA的帖子</string>
    <string name="my_collection">我的收藏</string>
    <string name="other_collection">TA的收藏</string>
    <string name="contact">联系方式</string>
    <string name="qq">QQ</string>
    <string name="email">电子邮件</string>
    <string name="phone_number">手机</string>
    <string name="personal_introduce">个人简介</string>
    <string name="sex">性别</string>
    <string name="personal_tag">个人标签</string>
    <string name="personal_info">个人资料</string>
    <string name="login_or_registe">（ 登录 / 注册 ）</string>
    <string name="username_or_password_error">账号或密码错误</string>

    <string name="trade_list">淘二手</string>
    <string name="education_assistant">教务助手</string>
    <string name="campus_bbs">校园BBS</string>
    <string name="developing">正在开发中</string>
    <string name="exit_current_user">注销</string>
    <string name="user_info">个人详情</string>
    <string name="user_manage">账号设置</string>

    <string name="add_shopping_card">收藏该帖</string>
    <string name="call_seller">查看卖家</string>
    <string name="connect_ways">联系方式</string>
    <string name="phone_or_qq">手机、QQ等</string>
    <string name="good_price">卖方出价   ￥</string>
    <string name="good_buy_time">入手时间</string>
    <string name="good_quality">物品成色</string>
    <string name="good_location">联系地址</string>
    <string name="not_necessary">(非必填)</string>
    <string name="good_details">物品详情</string>
    <string name="please_complete_info">请完成所有必填信息</string>
    <string-array name="goods_types">
        <item>生活用品</item>
        <item>数码科技</item>
        <item>服饰箱包</item>
        <item>图书音像</item>
        <item>其它</item>
    </string-array>
    <string name="all">全部</string>
    <string name="quality">成色</string>
    <string name="num">数量</string>
    <string name="new_or_old">新旧程度</string>
    <string name="buy_time">入手时间</string>
    <string name="date_input_type">格式:1997-01-01</string>
    <string name="all_comments">查看所有评论</string>
    <string name="no_more">没有了</string>
    <string name="seller">卖方</string>

    <string name="publish">发布</string>
    <string name="classify">分类</string>

    <string name="title">添加标题</string>
    <string name="choose_one_picture_as_cover">选择一张照片作为封面</string>
    <string name="add_pic">添加图片</string>
    <string name="add_text">添加文字</string>
    <string name="price">价格</string>
    <string name="no_comment">没有输入任何评论</string>
    <string name="price_unit">单位:人民币</string>
    <string name="good_num">物品数量</string>
    <string name="choose_type">选择分类</string>
    <string name="upload_successly">上传成功</string>
    <string name="uploading">正在上传</string>
    <string name="upload">上传</string>
    <string name="can_upload">是否确认上传内容</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="error_upload">上传发生错误，请重试</string>
    <string name="please_wait">请等待</string>

    <string name="search_hint">搜索</string>

    <string name="content">内容</string>
    <string name="click_show_title">点开标题</string>
    <string name="collected_true">成功收藏</string>
    <string name="collected_false">取消收藏</string>
    <string name="click_to_follow">点击关注</string>
    <string name="click_to_unfollow">点击取消关注</string>
    <string name="follow_true">关注成功</string>
    <string name="follow_false">取消关注</string>
    <string name="share">分享到...</string>

    <string name="amend_avatar">点击更换头像</string>
    <string name="amend_success">修改成功</string>
    <string name="amend_user_info">修改个人资料</string>
    <string name="amend_user_tag">编辑个性签名</string>
    <string name="amend_username">编辑用户名</string>
    <string name="amend_contract">编辑联系方式</string>
    <string name="amend_location">编辑联系地址</string>

    <string name="comments">评论</string>

    <string-array name="classify">
        <item>所有种类</item>
        <item>衣服</item>
    </string-array>

    <string-array name="sex">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string name="male">男</string>
    <string name="female">女</string>

    <!--新浪微博 -->
    <string name="no_weibo_app">请先下载最新版本的微博客户端</string>
</resources>
