<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/goods_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/publish_goods_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"/>

        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/publish_goods_content"
            android:gravity="top|left"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textMultiLine"
            android:hint="@string/content"
            android:minLines="6"
            android:maxLines="10"
            android:scrollbars="vertical"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:lines="2"
                    android:text="@string/choose_one_picture_as_cover"/>

                <ImageView
                android:id="@+id/goods_cover"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:elevation="7dp"
                android:src="@drawable/ic_add_64dp"
                android:layout_marginBottom="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/goods_add_outer_layout"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_pic"/>

            <LinearLayout
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/goods_add_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:elevation="7dp"
                    android:src="@drawable/ic_add_64dp" />

                <LinearLayout
                    android:id="@+id/goods_add_layout"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

</android.support.v7.widget.CardView>